Important change: The BaseValueParser now consistently returns null for all get-methods that return an Object, if the parameter name does not exist. This changes the behaviour of getBigDecimal which used to return 0 in this case.
Made ValueParser and BaseValueParser locale-aware. Note that the default locale used is always the default value of the JVM which is different from the previous behaviour where the locale used was sometimes Locale.US (for float, double and BigDecimal) and sometimes the JVM-default (for dates).


git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk@645954 13f79535-47bb-0310-9956-ffa450edef68